# chat-assistant

./: .gitignore  AGENTS.md  README.md  bot.py  pyproject.toml
.github/workflows/: apply-ai-ecosystem-backlog-once.yml  ci.yml  sync-ai-ecosystem-issues.yml
docs/: ecosystem-architecture.md  issue-dependency-graph.md  repository-context.md
docs/adr/: 0003-local-http-python-adapter-topology.md
scripts/github/: sync_ai_ecosystem_issues.sh
scripts/github/backlog/: chat-assistant-01.json  chat-assistant-02.json  chat-assistant-03.json  chat-assistant-04.json  common.json  game-assistant-01.json  game-assistant-02.json  game-assistant-03.json  health-assistant-01.json  health-assistant-02.json  health-assistant-03.json  lang-assistant-01.json  lang-assistant-02.json  lang-assistant-03.json  my-discord-bot.json
tests/: conftest.py  test_bot_helpers.py
