[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-discord"
version = "0.1.0"
description = "Local Ollama-powered Discord bot"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.12,<4",
    "discord.py>=2.6,<3",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.9,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2,<7",
    "ruff>=0.13,<1",
    "setuptools>=78.1.1",
]

[tool.setuptools]
py-modules = ["bot"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = [
    "--basetemp=.pytest_tmp",
    "--cov=bot",
    "--cov-report=term-missing",
    "--cov-fail-under=65",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
